infra/k8s/auth-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  auth
  namespace: default
  labels:
    app:  auth
spec:
  selector:
    matchLabels:
      app: auth
  replicas: 1
  template:
    metadata:
      labels:
        app:  auth
    spec:
      containers:
      - name:  auth
        image:  jesuswebdev/delifood-auth:latest
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: default
spec:
  selector:
    app: auth
  type: ClusterIP
  ports:
  - name: auth
    protocol: TCP
    port: 8080
    targetPort: 8080
