infra/k8s/nats-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  nats
  namespace: default
  labels:
    app:  nats
spec:
  selector:
    matchLabels:
      app: nats
  replicas: 1
  template:
    metadata:
      labels:
        app:  nats
    spec:
      containers:
      - name:  nats
        image:  nats:latest
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: default
spec:
  selector:
    app: nats
  type: ClusterIP
  ports:
  - name: nats
    protocol: TCP
    port: 4222 
    targetPort: 4222
